--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Shehel Yoosuf
 email: shehel@live.com
-description:  
+description:  ""
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://shehel.github.io" # the base hostname & protocol for your site
 twitter_username: shehel
